--- a/src/Shaparak.PaymentFacilitation.Client/Shaparak.PaymentFacilitation.Client.csproj
+++ b/src/Shaparak.PaymentFacilitation.Client/Shaparak.PaymentFacilitation.Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Version>1.0.0-preview.1</Version>
     <Authors>Iman Nemati; Mehdi Khosravi</Authors>
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
