--- a/src/Shaparak.PaymentFacilitation.Core/Shaparak.PaymentFacilitation.Core.csproj
+++ b/src/Shaparak.PaymentFacilitation.Core/Shaparak.PaymentFacilitation.Core.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
